# freebird

./: .gitignore  .release-please-manifest.json  .releaserc  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.toml  default.nix  entrypoint.sh  mise.toml  package-lock.json  package.json  release-please-config-hotfix.json  release-please-config.json
.github/workflows/: ci.yaml  release-please.yaml  release.yaml
github/workflows/: ci.yaml
src/: commands.rs  config.rs  events.rs  main.rs  typekeys.rs
