[package]
name = "freebird"
version = "0.1.0"
authors = ["sillock1"]
edition = "2021"

[dependencies]
reqwest = "0.11.23"
serenity = "0.12.4"
songbird = {version = "0.4.6", default-features = true, features = ["builtin-queue"]}
symphonia = "0.5.4"
tokio = { version = "1.42.0", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-futures = "0.2.5"