[dependencies]
  openssl = '0.10.68'
  reqwest = '0.11.23'
  serenity = '0.12.4'
  symphonia = '0.5.4'
  tracing = '0.1.41'
  tracing-futures = '0.2.5'
  tracing-subscriber = '0.3.19'

  [dependencies.songbird]
    default-features = true
    features = ['builtin-queue']
    version = '0.4.6'

  [dependencies.tokio]
    features = ['full']
    version = '1.42.0'

[package]
  authors = ['sillock1']
  edition = '2021'
  name = 'freebird'
  version = "0.6.0"
