[dependencies]
  openssl = '0.10.68'
  poise = '0.6.1'
  reqwest = '0.11.23'
  serde = '1.0'
  serenity = '0.12.4'
  symphonia = '0.5.4'
  toml = '0.8'
  tracing = '0.1.41'
  tracing-futures = '0.2.5'

  [dependencies.songbird]
    default-features = true
    features = ['builtin-queue']
    version = '0.4.6'

  [dependencies.tokio]
    features = ['full']
    version = '1.42.0'

  [dependencies.tracing-subscriber]
    features = ['env-filter', 'std']
    version = '0.3.19'

[package]
  authors = ['sillock1']
  edition = '2021'
  name = 'freebird'
  version = '0.7.1'
